--- a/index.html
+++ b/index.html
@@ -16,11 +16,40 @@
                 <a href="#" class="logo">
                     <img src="./images/Logo.png" alt="logo" width="150" height="34">
                 </a>
-                <nav class="navigation-bar">
-                    <a href="#" class="link-header">Home</a>
-                    <a href="#" class="link-header">Shop</a>
-                    <a href="#" class="link-header">Plant care</a>
-                    <a href="#" class="link-header">Blogs</a>
+                <nav class="navigation">
+                    <a href="#" class="navigation-item">Home</a>
+                    <a href="#" class="navigation-item">Shop</a>
+
+                    <div class="navigation-item-list navigation-item-list-hover">
+                        <a href="#" class="navigation-item">Plant care</a>
+                            <div class="navigation-sublist sublist">
+                                <div class="sublist-bg">
+                                    <a href="#">Drainage</a>
+                                    <a href="#">Fungicides</a>
+                                    <a href="#">Fertilizer</a>
+                                    <div class="navigation-item-list-level-two navigation-item-list-hover">
+                                        <a href="#">
+                                            <span>Priming</span>
+                                            <svg width="7" height="10" viewBox="0 0 7 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M1.14228 0.945805C0.909014 0.730097 0.908201 0.379612 1.14046 0.162973C1.35161 -0.0339699 1.68269 -0.0524979 1.9164 0.107825L1.98337 0.161288L6.79132 4.60737C7.00401 4.80406 7.02336 5.11265 6.84935 5.32969L6.79135 5.39186L1.9834 9.83868C1.75016 10.0544 1.37278 10.0537 1.1405 9.83706C0.929333 9.64013 0.910782 9.33257 1.08439 9.1162L1.14224 9.05423L5.52584 4.99941L1.14228 0.945805Z" fill="rgba(61, 61, 61, 1)" fill="#3D3D3D"/>
+                                                </svg>
+                                        </a>
+                                        <div class="navigation-categories sublist">
+                                            <div class="sublist-bg">
+                                                <a href="#">Universal</a>
+                                                <a href="#">For Ficus</a>
+                                                <a href="#">For Cacti</a>
+                                                <a href="#">For Citrus</a>
+                                                <a href="#">For those in bloom</a>
+                                                <a href="#">For Orchids</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+
+                    <a href="#" class="navigation-item">Blogs</a>
                 </nav>
                 <a href="#" class="login"> 
                     <img src="./images/Logout.svg" width="20px" height="20px" alt="login">
